added some more styles and guessing image, validdating numericity is still an issue

--- a/index.html
+++ b/index.html
@@ -9,11 +9,9 @@
 
 </head>
 <body>
-    <div class="replay">
-        <p><i class="fa-solid fa-repeat"></i> replay</p>
-    </div>
-    <div class="compdisplay">
-        <img src="" alt="image">
+    <div class="replay"><i class="fa-solid fa-repeat"></i> <span>replay</span></div>
+    <div class="compDisplay">
+        <img src="./guess.jpg" alt="image" id="image">
     </div>
     <div class="messages">Play to guess!</div>
     <div class="gameSection">
